# lui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: imgui.cmake  imgui.html  implot.cmake
data/: imgui.default.ini
include/lui/: ParaxialConstants.hpp  RayAimer.hpp  RayInterceptCurve.hpp  SpotDiagram.hpp  SurfaceData.hpp  UI.hpp  ui.hpp
include/lui/utils/: CircleGrid.hpp  linspace.hpp
src/: ParaxialConstants.cpp  RayAimer.cpp  RayInterceptCurve.cpp  SpotDiagram.cpp  SurfaceData.cpp  UI.cpp  main.cpp  sdl.cpp  ui.cpp
